--- a/Trello3.html
+++ b/Trello3.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <style>
     .coluna {
         width: 400px;
@@ -59,7 +61,8 @@
         background: #555; 
     }
 </style>
-
+</head>
+<body>
 <div class="row">
     <div class="col-xs-12">
         <div class="box" style="background-color: whitesmoke;">
@@ -114,7 +117,6 @@
         </div>
     </div>
 </div>
-
 <script>
 		var i=0;
 		var j=0;
@@ -156,3 +158,5 @@
 			el.appendChild(document.getElementById(data));
 		}
 </script>
+</body>
+</html>
